conexão do banco de origem

--- a/script_bd.ipynb
+++ b/script_bd.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "f780b613",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,24 +52,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "fa00f670",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conexão estabelecida com sucesso!\n"
+     ]
+    }
+   ],
    "source": [
-    "# conn_source = psycopg2.connect(\n",
-    "#     host='',\n",
-    "#     database='',\n",
-    "#     user='',\n",
-    "#     password='',\n",
-    "#     port=\n",
-    "# )\n",
+    "conn_source = psycopg2.connect(\n",
+    "    host=os.getenv(\"SOURCE_HOST\"),\n",
+    "    database=os.getenv(\"SOURCE_DATABASE\"),\n",
+    "    user=os.getenv(\"SOURCE_USER\"),\n",
+    "    password=os.getenv(\"SOURCE_PASSWORD\"),\n",
+    "    port=os.getenv(\"SOURCE_PORT\")\n",
+    ")\n",
     "\n",
-    "# try:\n",
-    "#     cur_source = conn_source.cursor()\n",
-    "#     print(\"Conexão estabelecida com sucesso!\")\n",
-    "# except Exception as e:\n",
-    "#     print(\"Erro ao conectar ao banco de dados:\\n\", e)"
+    "try:\n",
+    "    cur_source = conn_source.cursor()\n",
+    "    print(\"Conexão estabelecida com sucesso!\")\n",
+    "except Exception as e:\n",
+    "    print(\"Erro ao conectar ao banco de dados:\\n\", e)"
    ]
   },
   {
