funções de insert e update

--- a/script_bd.ipynb
+++ b/script_bd.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "f780b613",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "fa00f670",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
    "source": [
     "conn_source = psycopg2.connect(\n",
     "    host=os.getenv(\"SOURCE_HOST\"),\n",
-    "    database=os.getenv(\"SOURCE_DATABASE\"),\n",
+    "    database=\"db Copa \",\n",
     "    user=os.getenv(\"SOURCE_USER\"),\n",
     "    password=os.getenv(\"SOURCE_PASSWORD\"),\n",
     "    port=os.getenv(\"SOURCE_PORT\")\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "06ebc933",
    "metadata": {},
    "outputs": [
@@ -120,121 +120,385 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2274b4e8",
+   "id": "5ab40cbb",
    "metadata": {},
    "source": [
-    "Script Inicial"
+    "Funções de INSERT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e9630c4a",
+   "execution_count": 19,
+   "id": "6c11327d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cur_target.execute(\"\"\"\n",
-    "# CREATE TABLE paises (\n",
-    "#     id SERIAL PRIMARY KEY,\n",
-    "#     nome VARCHAR(100) NOT NULL,\n",
-    "#     continente VARCHAR(50) NOT NULL,\n",
-    "#     qnt_titulos INT NOT NULL DEFAULT 0,\n",
-    "#     criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     atualizado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n",
-    "# );\n",
+    "def insert_paises(df, cur_target, conn_target):\n",
+    "    query = \"\"\"\n",
+    "        INSERT INTO paises (\n",
+    "            id, nome, continente, qnt_titulos,\n",
+    "            criado_em, atualizado_em\n",
+    "        )\n",
+    "        VALUES (%s, %s, %s, %s, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP);\n",
+    "    \"\"\"\n",
+    "    data = [\n",
+    "        (\n",
+    "            int(ii[\"id\"]),\n",
+    "            ii[\"nome\"],\n",
+    "            ii[\"continente\"],\n",
+    "            int(ii[\"qnt_titulos\"]),\n",
+    "        )\n",
+    "        for i, ii in df.iterrows()\n",
+    "    ]\n",
     "\n",
-    "# CREATE TABLE jogadores (\n",
-    "#     id SERIAL PRIMARY KEY,\n",
-    "#     nome VARCHAR(100) NOT NULL,\n",
-    "#     data_nascimento DATE NOT NULL,\n",
-    "#     posicao VARCHAR(50) NOT NULL,\n",
-    "#     altura DECIMAL NULL,\n",
-    "#     peso DECIMAL NULL,\n",
-    "#     pais_id INT,\n",
-    "#     criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     atualizado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     FOREIGN KEY (pais_id) REFERENCES paises(id)\n",
-    "# );\n",
+    "    cur_target.executemany(query, data)\n",
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c0398de0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_jogadores(df, cur_target, conn_target):\n",
+    "    query = \"\"\"\n",
+    "        INSERT INTO jogadores (\n",
+    "            id, nome, data_nascimento, posicao, altura, peso, pais_id,\n",
+    "            criado_em, atualizado_em\n",
+    "        )\n",
+    "        VALUES (%s, %s, %s, %s, %s, %s, %s, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP);\n",
+    "    \"\"\"\n",
+    "    data = [\n",
+    "        (\n",
+    "            int(ii[\"id\"]),\n",
+    "            ii[\"nome\"],\n",
+    "            ii[\"data_nascimento\"],\n",
+    "            ii[\"posicao\"],\n",
+    "            float(ii[\"altura\"]),\n",
+    "            float(ii[\"peso\"]),\n",
+    "            int(ii[\"pais_id\"]),\n",
+    "        )\n",
+    "        for i, ii in df.iterrows()\n",
+    "    ]\n",
     "\n",
-    "# CREATE TABLE partidas (\n",
-    "#     id SERIAL PRIMARY KEY,\n",
-    "#     data_partida DATE NOT NULL,\n",
-    "#     estadio VARCHAR(100) NOT NULL,\n",
-    "#     time_casa_id INT,\n",
-    "#     time_visitante_id INT,\n",
-    "#     placar_casa INT,\n",
-    "#     placar_visitante INT,\n",
-    "#     qnt_faltas_casa INT,\n",
-    "#     qnt_faltas_visitante INT,\n",
-    "#     criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     atualizado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     FOREIGN KEY (time_casa_id) REFERENCES paises(id),\n",
-    "#     FOREIGN KEY (time_visitante_id) REFERENCES paises(id)\n",
-    "# );\n",
+    "    cur_target.executemany(query, data)\n",
+    "    conn_target.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b61d14c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_partidas(df, cur_target, conn_target):\n",
+    "    query = \"\"\"\n",
+    "        INSERT INTO partidas (\n",
+    "            id, data_partida, estadio, time_casa_id, time_visitante_id,\n",
+    "            placar_casa, placar_visitante, qnt_faltas_casa, qnt_faltas_visitante,\n",
+    "            criado_em, atualizado_em\n",
+    "        )\n",
+    "        VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP);\n",
+    "    \"\"\"\n",
+    "    data = [\n",
+    "        (\n",
+    "            int(ii[\"id\"]),\n",
+    "            ii[\"data_partida\"],\n",
+    "            ii[\"estadio\"],\n",
+    "            int(ii[\"time_casa_id\"]),\n",
+    "            int(ii[\"time_visitante_id\"]),\n",
+    "            int(ii[\"placar_casa\"]),\n",
+    "            int(ii[\"placar_visitante\"]),\n",
+    "            int(ii[\"qnt_faltas_casa\"]),\n",
+    "            int(ii[\"qnt_faltas_visitante\"]),\n",
+    "        )\n",
+    "        for i, ii in df.iterrows()\n",
+    "    ]\n",
     "\n",
-    "# CREATE TABLE campeonatos (\n",
-    "#     id SERIAL PRIMARY KEY,\n",
-    "#     ano INT NOT NULL,\n",
-    "#     sede VARCHAR(100),\n",
-    "#     campeao_id INT,\n",
-    "#     vice_id INT,\n",
-    "#     criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     atualizado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     FOREIGN KEY (campeao_id) REFERENCES paises(id),\n",
-    "#     FOREIGN KEY (vice_id) REFERENCES paises(id)\n",
-    "# );\n",
+    "    cur_target.executemany(query, data)\n",
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "25e03753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_campeonatos(df, cur_target, conn_target):\n",
+    "    query = \"\"\"\n",
+    "        INSERT INTO campeonatos (\n",
+    "            id, ano, sede, campeao_id, vice_id,\n",
+    "            criado_em, atualizado_em\n",
+    "        )\n",
+    "        VALUES (%s, %s, %s, %s, %s, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP);\n",
+    "    \"\"\"\n",
+    "    data = [\n",
+    "        (\n",
+    "            int(ii[\"id\"]),\n",
+    "            int(ii[\"ano\"]),\n",
+    "            ii[\"sede\"],\n",
+    "            ii[\"campeao_id\"],\n",
+    "            ii[\"vice_id\"],\n",
+    "        )\n",
+    "        for i, ii in df.iterrows()\n",
+    "    ]\n",
     "\n",
-    "# CREATE TABLE fases (\n",
-    "#     id SERIAL PRIMARY KEY,\n",
-    "#     nome VARCHAR(50) NOT NULL, -- Oitavas, Quartas, Semifinal, Final\n",
-    "#     criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     atualizado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n",
-    "# );\n",
+    "    cur_target.executemany(query, data)\n",
+    "    conn_target.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1dff6f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_fases(df, cur_target, conn_target):\n",
+    "    query = \"\"\"\n",
+    "        INSERT INTO fases (\n",
+    "            id, nome,\n",
+    "            criado_em, atualizado_em\n",
+    "        )\n",
+    "        VALUES (%s, %s, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP);\n",
+    "    \"\"\"\n",
+    "    data = [\n",
+    "        (\n",
+    "            int(ii[\"id\"]),\n",
+    "            ii[\"nome\"],\n",
+    "        )\n",
+    "        for i, ii in df.iterrows()\n",
+    "    ]\n",
     "\n",
-    "# CREATE TABLE chaveamento (\n",
-    "#     id SERIAL PRIMARY KEY,\n",
-    "#     campeonato_id INT NOT NULL,\n",
-    "#     fase_id INT NOT NULL,\n",
-    "#     partida_id INT NOT NULL,\n",
-    "#     vencedor_id INT NULL,\n",
-    "#     criado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     atualizado_em TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
-    "#     FOREIGN KEY (campeonato_id) REFERENCES campeonatos(id),\n",
-    "#     FOREIGN KEY (fase_id) REFERENCES fases(id),\n",
-    "#     FOREIGN KEY (partida_id) REFERENCES partidas(id),\n",
-    "#     FOREIGN KEY (vencedor_id) REFERENCES paises(id)\n",
-    "# );\n",
+    "    cur_target.executemany(query, data)\n",
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "668bff6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_chaveamento(df, cur_target, conn_target):\n",
+    "    query = \"\"\"\n",
+    "        INSERT INTO chaveamento (\n",
+    "            id, campeonato_id, fase_id, partida_id, vencedor_id,\n",
+    "            criado_em, atualizado_em\n",
+    "        )\n",
+    "        VALUES (%s, %s, %s, %s, %s, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP);\n",
+    "    \"\"\"\n",
+    "    data = [\n",
+    "        (\n",
+    "            int(ii[\"id\"]),\n",
+    "            int(ii[\"campeonato_id\"]),\n",
+    "            int(ii[\"fase_id\"]),\n",
+    "            int(ii[\"partida_id\"]),\n",
+    "            ii[\"vencedor_id\"],\n",
+    "        )\n",
+    "        for i, ii in df.iterrows()\n",
+    "    ]\n",
     "\n",
-    "# INSERT INTO paises (nome, continente, qnt_titulos) VALUES\n",
-    "# ('Brasil', 'América do Sul', 5),\n",
-    "# ('Argentina', 'América do Sul', 3),\n",
-    "# ('Alemanha', 'Europa', 4),\n",
-    "# ('França', 'Europa', 2),\n",
-    "# ('Japão', 'Ásia', 0);\n",
+    "    cur_target.executemany(query, data)\n",
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b98e611",
+   "metadata": {},
+   "source": [
+    "Funções de UPDATE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "de8110fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_paises(df, cur_target, conn_target):\n",
+    "    for i, ii in df.iterrows():\n",
+    "        query = \"\"\"\n",
+    "            UPDATE paises\n",
+    "            SET nome = %s,\n",
+    "                continente = %s,\n",
+    "                qnt_titulos = %s,\n",
+    "                atualizado_em = CURRENT_TIMESTAMP\n",
+    "            WHERE id = %s;\n",
+    "        \"\"\"\n",
+    "        values = (\n",
+    "            ii[\"nome\"],\n",
+    "            ii[\"continente\"],\n",
+    "            ii[\"qnt_titulos\"],\n",
+    "            ii[\"id\"]\n",
+    "        )\n",
+    "        cur_target.execute(query, values)\n",
     "\n",
-    "# INSERT INTO jogadores (nome, data_nascimento, posicao, pais_id) VALUES\n",
-    "# ('Neymar Jr.', '1992-02-05', 'Atacante', 1),\n",
-    "# ('Lionel Messi', '1987-06-24', 'Atacante', 2),\n",
-    "# ('Thomas Müller', '1989-09-13', 'Meio-campista', 3),\n",
-    "# ('Kylian Mbappé', '1998-12-20', 'Atacante', 4),\n",
-    "# ('Vinicius Jr.', '2000-07-12', 'Atacante', 1);\n",
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5862a871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_jogadores(df, cur_target, conn_target):\n",
+    "    for i, ii in df.iterrows():\n",
+    "        query = \"\"\"\n",
+    "            UPDATE jogadores\n",
+    "            SET nome = %s,\n",
+    "                data_nascimento = %s,\n",
+    "                posicao = %s,\n",
+    "                altura = %s,\n",
+    "                peso = %s,\n",
+    "                pais_id = %s,\n",
+    "                atualizado_em = CURRENT_TIMESTAMP\n",
+    "            WHERE id = %s;\n",
+    "        \"\"\"\n",
+    "        values = (\n",
+    "            ii[\"nome\"],\n",
+    "            ii[\"data_nascimento\"],\n",
+    "            ii[\"posicao\"],\n",
+    "            ii[\"altura\"],\n",
+    "            ii[\"peso\"],\n",
+    "            ii[\"pais_id\"],\n",
+    "            ii[\"id\"]\n",
+    "        )\n",
+    "        cur_target.execute(query, values)\n",
     "\n",
-    "# INSERT INTO campeonatos (ano, sede, campeao_id, vice_id)\n",
-    "# VALUES (2022, 'Catar', 2, 4);\n",
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5cc07bd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_partidas(df, cur_target, conn_target):\n",
+    "    for i, ii in df.iterrows():\n",
+    "        query = \"\"\"\n",
+    "            UPDATE partidas\n",
+    "            SET data_partida = %s,\n",
+    "                estadio = %s,\n",
+    "                time_casa_id = %s,\n",
+    "                time_visitante_id = %s,\n",
+    "                placar_casa = %s,\n",
+    "                placar_visitante = %s,\n",
+    "                qnt_faltas_casa = %s,\n",
+    "                qnt_faltas_visitante = %s,\n",
+    "                atualizado_em = CURRENT_TIMESTAMP\n",
+    "            WHERE id = %s;\n",
+    "        \"\"\"\n",
+    "        values = (\n",
+    "            ii[\"data_partida\"],\n",
+    "            ii[\"estadio\"],\n",
+    "            ii[\"time_casa_id\"],\n",
+    "            ii[\"time_visitante_id\"],\n",
+    "            ii[\"placar_casa\"],\n",
+    "            ii[\"placar_visitante\"],\n",
+    "            ii[\"qnt_faltas_casa\"],\n",
+    "            ii[\"qnt_faltas_visitante\"],\n",
+    "            ii[\"id\"]\n",
+    "        )\n",
+    "        cur_target.execute(query, values)\n",
     "\n",
-    "# INSERT INTO fases (nome) VALUES\n",
-    "# ('Oitavas de final'),\n",
-    "# ('Quartas de final'),\n",
-    "# ('Semifinal'),\n",
-    "# ('Final');\n",
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "69646353",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_campeonatos(df, cur_target, conn_target):\n",
+    "    for i, ii in df.iterrows():\n",
+    "        query = \"\"\"\n",
+    "            UPDATE campeonatos\n",
+    "            SET ano = %s,\n",
+    "                sede = %s,\n",
+    "                campeao_id = %s,\n",
+    "                vice_id = %s,\n",
+    "                atualizado_em = CURRENT_TIMESTAMP\n",
+    "            WHERE id = %s;\n",
+    "        \"\"\"\n",
+    "        values = (\n",
+    "            ii[\"ano\"],\n",
+    "            ii[\"sede\"],\n",
+    "            ii[\"campeao_id\"],\n",
+    "            ii[\"vice_id\"],\n",
+    "            ii[\"id\"]\n",
+    "        )\n",
+    "        cur_target.execute(query, values)\n",
     "\n",
-    "# INSERT INTO partidas (data_partida, estadio, time_casa_id, time_visitante_id, placar_casa, placar_visitante)\n",
-    "# VALUES ('2022-12-18', 'Estádio Lusail', 2, 4, 3, 3);\n",
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e5e651f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_fases(df, cur_target, conn_target):\n",
+    "    for i, ii in df.iterrows():\n",
+    "        query = \"\"\"\n",
+    "            UPDATE fases\n",
+    "            SET nome = %s,\n",
+    "                atualizado_em = CURRENT_TIMESTAMP\n",
+    "            WHERE id = %s;\n",
+    "        \"\"\"\n",
+    "        values = (\n",
+    "            ii[\"nome\"],\n",
+    "            ii[\"id\"]\n",
+    "        )\n",
+    "        cur_target.execute(query, values)\n",
     "\n",
-    "# INSERT INTO chaveamento (campeonato_id, fase_id, partida_id, vencedor_id)\n",
-    "# VALUES (1, 4, 1, 2);\n",
-    "# \"\"\")\n",
-    "# conn_target.commit()"
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6899018e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_chaveamento(df, cur_target, conn_target):\n",
+    "    for i, ii in df.iterrows():\n",
+    "        query = \"\"\"\n",
+    "            UPDATE chaveamento\n",
+    "            SET campeonato_id = %s,\n",
+    "                fase_id = %s,\n",
+    "                partida_id = %s,\n",
+    "                vencedor_id = %s,\n",
+    "                atualizado_em = CURRENT_TIMESTAMP\n",
+    "            WHERE id = %s;\n",
+    "        \"\"\"\n",
+    "        values = (\n",
+    "            ii[\"campeonato_id\"],\n",
+    "            ii[\"fase_id\"],\n",
+    "            ii[\"partida_id\"],\n",
+    "            ii[\"vencedor_id\"],\n",
+    "            ii[\"id\"]\n",
+    "        )\n",
+    "        cur_target.execute(query, values)\n",
+    "\n",
+    "    conn_target.commit()"
    ]
   }
  ],
