tabela de controle

--- a/script_bd.ipynb
+++ b/script_bd.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "f780b613",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,6 +37,7 @@
     "import pandas as pd\n",
     "import psycopg2\n",
     "import os\n",
+    "from datetime import datetime\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()"
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "06ebc933",
    "metadata": {},
    "outputs": [
@@ -116,6 +117,31 @@
     "    print(\"Conexão estabelecida com sucesso!\")\n",
     "except Exception as e:\n",
     "    print(\"Erro ao conectar ao banco de dados:\\n\", e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b8f8a1a",
+   "metadata": {},
+   "source": [
+    "Criação da Tabela de Controle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1349ffce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_last_sinc(conn_target):\n",
+    "    last_sinc = pd.read_sql_query(\"SELECT MAX(ultima_sincronizacao) FROM controle_sincronizacao;\", conn_target)\n",
+    "    return last_sinc.iloc[0, 0] or datetime(1900,1,1)\n",
+    "\n",
+    "def set_new_sinc(cur_target, conn_target):\n",
+    "    data = datetime.now()\n",
+    "    cur_target.execute(\"INSERT INTO controle_sincronizacao (ultima_sincronizacao) VALUES (%s)\", data)\n",
+    "    conn_target.commit()"
    ]
   },
   {
