funções para recuperar os dados

--- a/script_bd.ipynb
+++ b/script_bd.ipynb
@@ -129,19 +129,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1349ffce",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_last_sinc(conn_target):\n",
-    "    last_sinc = pd.read_sql_query(\"SELECT MAX(ultima_sincronizacao) FROM controle_sincronizacao;\", conn_target)\n",
+    "    last_sinc = pd.read_sql_query(\"SELECT MAX(last_sincronizacao) FROM controle_sincronizacao;\", conn_target)\n",
     "    return last_sinc.iloc[0, 0] or datetime(1900,1,1)\n",
     "\n",
     "def set_new_sinc(cur_target, conn_target):\n",
     "    data = datetime.now()\n",
-    "    cur_target.execute(\"INSERT INTO controle_sincronizacao (ultima_sincronizacao) VALUES (%s)\", data)\n",
+    "    cur_target.execute(\"INSERT INTO controle_sincronizacao (last_sincronizacao) VALUES (%s)\", data)\n",
     "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3526af64",
+   "metadata": {},
+   "source": [
+    "Funções para Recuperar os Dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d7a1097",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_inserts(conn_source, table, last_sinc):\n",
+    "    query = f\"SELECT * FROM {table} WHERE criado_em > '{last_sinc}'\"\n",
+    "    return pd.read_sql(query, conn_source)\n",
+    "\n",
+    "def get_updates(conn_source, table, last_sinc):\n",
+    "    query = f\"\"\"\n",
+    "        SELECT * FROM {table}\n",
+    "        WHERE atualizado_em > '{last_sinc}'\n",
+    "        AND criado_em <= '{last_sinc}'\n",
+    "    \"\"\"\n",
+    "    return pd.read_sql(query, conn_source)\n",
+    "\n",
+    "def get_deletes(conn_source, table, last_sinc):\n",
+    "    query = f\"\"\"\n",
+    "        SELECT * FROM {table}\n",
+    "        WHERE deletado_em > '{last_sinc}'\n",
+    "    \"\"\"\n",
+    "    return pd.read_sql(query, conn_source)"
    ]
   },
   {
