funções de sincronização

--- a/script_bd.ipynb
+++ b/script_bd.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "fa00f670",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "06ebc933",
    "metadata": {},
    "outputs": [
@@ -121,66 +121,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b8f8a1a",
-   "metadata": {},
-   "source": [
-    "Criação da Tabela de Controle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1349ffce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_last_sinc(conn_target):\n",
-    "    last_sinc = pd.read_sql_query(\"SELECT MAX(last_sincronizacao) FROM controle_sincronizacao;\", conn_target)\n",
-    "    return last_sinc.iloc[0, 0] or datetime(1900,1,1)\n",
-    "\n",
-    "def set_new_sinc(cur_target, conn_target):\n",
-    "    data = datetime.now()\n",
-    "    cur_target.execute(\"INSERT INTO controle_sincronizacao (last_sincronizacao) VALUES (%s)\", data)\n",
-    "    conn_target.commit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3526af64",
-   "metadata": {},
-   "source": [
-    "Funções para Recuperar os Dados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d7a1097",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_inserts(conn_source, table, last_sinc):\n",
-    "    query = f\"SELECT * FROM {table} WHERE criado_em > '{last_sinc}'\"\n",
-    "    return pd.read_sql(query, conn_source)\n",
-    "\n",
-    "def get_updates(conn_source, table, last_sinc):\n",
-    "    query = f\"\"\"\n",
-    "        SELECT * FROM {table}\n",
-    "        WHERE atualizado_em > '{last_sinc}'\n",
-    "        AND criado_em <= '{last_sinc}'\n",
-    "    \"\"\"\n",
-    "    return pd.read_sql(query, conn_source)\n",
-    "\n",
-    "def get_deletes(conn_source, table, last_sinc):\n",
-    "    query = f\"\"\"\n",
-    "        SELECT * FROM {table}\n",
-    "        WHERE deletado_em > '{last_sinc}'\n",
-    "    \"\"\"\n",
-    "    return pd.read_sql(query, conn_source)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5ab40cbb",
    "metadata": {},
    "source": [
@@ -189,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "6c11327d",
    "metadata": {},
    "outputs": [],
@@ -218,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "c0398de0",
    "metadata": {},
    "outputs": [],
@@ -250,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "b61d14c9",
    "metadata": {},
    "outputs": [],
@@ -285,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "25e03753",
    "metadata": {},
    "outputs": [],
@@ -315,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "1dff6f4b",
    "metadata": {},
    "outputs": [],
@@ -342,12 +282,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "668bff6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def insert_chaveamento(df, cur_target, conn_target):\n",
+    "def insert_chaveamentos(df, cur_target, conn_target):\n",
     "    query = \"\"\"\n",
     "        INSERT INTO chaveamento (\n",
     "            id, campeonato_id, fase_id, partida_id, vencedor_id,\n",
@@ -380,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "de8110fd",
    "metadata": {},
    "outputs": [],
@@ -408,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "5862a871",
    "metadata": {},
    "outputs": [],
@@ -442,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "5cc07bd2",
    "metadata": {},
    "outputs": [],
@@ -480,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "69646353",
    "metadata": {},
    "outputs": [],
@@ -510,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "e5e651f5",
    "metadata": {},
    "outputs": [],
@@ -534,12 +474,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "6899018e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_chaveamento(df, cur_target, conn_target):\n",
+    "def update_chaveamentos(df, cur_target, conn_target):\n",
     "    for i, ii in df.iterrows():\n",
     "        query = \"\"\"\n",
     "            UPDATE chaveamento\n",
@@ -560,6 +500,190 @@
     "        cur_target.execute(query, values)\n",
     "\n",
     "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "18ec24a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete_paises():\n",
+    "    pass\n",
+    "\n",
+    "def delete_jogadores():\n",
+    "    pass\n",
+    "\n",
+    "def delete_partidas():\n",
+    "    pass\n",
+    "\n",
+    "def delete_campeonatos():\n",
+    "    pass\n",
+    "\n",
+    "def delete_fases():\n",
+    "    pass\n",
+    "\n",
+    "def delete_chaveamentos():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e10bc215",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "funcs = {\n",
+    "    \"paises\": {\n",
+    "        \"insert\": insert_paises,\n",
+    "        \"update\": update_paises,\n",
+    "        \"delete\": delete_paises\n",
+    "    },\n",
+    "    \"jogadores\": {\n",
+    "        \"insert\": insert_jogadores,\n",
+    "        \"update\": update_jogadores,\n",
+    "        \"delete\": delete_jogadores\n",
+    "    },\n",
+    "    \"partidas\": {\n",
+    "        \"insert\": insert_partidas,\n",
+    "        \"update\": update_partidas,\n",
+    "        \"delete\": delete_partidas\n",
+    "    },\n",
+    "    \"campeonatos\": {\n",
+    "        \"insert\": insert_campeonatos,\n",
+    "        \"update\": update_campeonatos,\n",
+    "        \"delete\": delete_campeonatos\n",
+    "    },\n",
+    "    \"fases\": {\n",
+    "        \"insert\": insert_fases,\n",
+    "        \"update\": update_fases,\n",
+    "        \"delete\": delete_fases\n",
+    "    },\n",
+    "    \"chaveamentos\": {\n",
+    "        \"insert\": insert_chaveamentos,\n",
+    "        \"update\": update_chaveamentos,\n",
+    "        \"delete\": delete_chaveamentos\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be474142",
+   "metadata": {},
+   "source": [
+    "Funções de Controle da Última Sincronização"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "078cad5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_last_sinc(conn_target):\n",
+    "    last_sinc = pd.read_sql_query(\"SELECT MAX(last_sincronizacao) FROM controle_sincronizacao;\", conn_target)\n",
+    "    return last_sinc.iloc[0, 0] or datetime(1900,1,1)\n",
+    "\n",
+    "def set_last_sinc(cur_target, conn_target):\n",
+    "    data = datetime.now()\n",
+    "    cur_target.execute(\"INSERT INTO controle_sincronizacao (last_sincronizacao) VALUES (%s)\", data)\n",
+    "    conn_target.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0553db35",
+   "metadata": {},
+   "source": [
+    "Funções para localizar as inserções, atualizações e remoções de registros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc9b5bec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_inserts(conn_source, table, last_sinc):\n",
+    "    query = f\"SELECT * FROM {table} WHERE criado_em > '{last_sinc}'\"\n",
+    "    return pd.read_sql(query, conn_source)\n",
+    "\n",
+    "def get_updates(conn_source, table, last_sinc):\n",
+    "    query = f\"\"\"\n",
+    "        SELECT * FROM {table}\n",
+    "        WHERE atualizado_em > '{last_sinc}'\n",
+    "        AND criado_em <= '{last_sinc}'\n",
+    "    \"\"\"\n",
+    "    return pd.read_sql(query, conn_source)\n",
+    "\n",
+    "def get_deletes(conn_source, table, last_sinc):\n",
+    "    query = f\"\"\"\n",
+    "        SELECT * FROM {table}\n",
+    "        WHERE deletado_em > '{last_sinc}'\n",
+    "    \"\"\"\n",
+    "    return pd.read_sql(query, conn_source)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b09825c",
+   "metadata": {},
+   "source": [
+    "Função de Sincronização de uma tabela"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a1b76dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sinc_table(conn_source, conn_target, cur_target, table, funcs, last_sinc):\n",
+    "    inserts = get_inserts(conn_source, table, last_sinc)\n",
+    "    updates = get_updates(conn_source, table, last_sinc)\n",
+    "    deletes = get_deletes(conn_source, table, last_sinc)\n",
+    "\n",
+    "    if not inserts.empty:\n",
+    "        funcs[table][\"insert\"](inserts, cur_target, conn_target)\n",
+    "        print(f\"{table}: {len(inserts)} inseridos\")\n",
+    "\n",
+    "    if not updates.empty:\n",
+    "        funcs[table][\"update\"](updates, cur_target, conn_target)\n",
+    "        print(f\"{table}: {len(updates)} atualizados\")\n",
+    "\n",
+    "    if not deletes.empty:\n",
+    "        funcs[table][\"delete\"](deletes, cur_target, conn_target)\n",
+    "        print(f\"{table}: {len(deletes)} deletados\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f31f5874",
+   "metadata": {},
+   "source": [
+    "Função com Loop para Sincronizar todas as tabelas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d200108d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sinc_all_tables():\n",
+    "    last_sinc = get_last_sinc(conn_target)\n",
+    "\n",
+    "    for table in funcs.keys():\n",
+    "        sinc_table(conn_source, conn_target, cur_target, table, funcs, last_sinc)\n",
+    "\n",
+    "    set_last_sinc(cur_target, conn_target)"
    ]
   }
  ],
